
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pregunta1TV"
            android:text="@string/encuesta_vivienda_pregunta_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinnerPregunta1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>

        <TextView
            android:id="@+id/pregunta2TV"
            android:text="@string/encuesta_vivienda_pregunta_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinnerPregunta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>


        <TextView
            android:id="@+id/pregunta3TV"
            android:text="@string/encuesta_vivienda_pregunta_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Spinner
            android:id="@+id/spinnerPregunta3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>

        <TextView
            android:id="@+id/pregunta4TV"
            android:text="@string/encuesta_vivienda_pregunta_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Spinner
            android:id="@+id/spinnerPregunta4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>

        <TextView
            android:id="@+id/pregunta5TV"
            android:text="@string/encuesta_vivienda_pregunta_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Spinner
            android:id="@+id/spinnerPregunta5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>

    </LinearLayout>
</ScrollView>